--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon src/index.js --exec babel-node",
-    "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public"
+    "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public",
+    "start":"node dist/indes.js"
+
   },
   "keywords": [],
   "author": "Nico",
