--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npx nodemon src/index.js --exec babel-node",
     "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public",
-    "start":"node dist/indes.js"
+    "start":"node dist/index.js"
 
   },
   "keywords": [],
