--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "dev": "npx nodemon src/index.js --exec babel-node",
     "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public",
-    "start":"node dist/index.js"
-
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "Nico",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.16.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
